--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@headlessui/vue": "^1.7.19",
     "@heroicons/vue": "^2.1.1",
     "axios": "^0.26.0",
