--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@headlessui/vue": "^1.7.19",
-    "@heroicons/vue": "^2.1.1",
-    "axios": "^0.26.0",
-    "firebase": "^9.6.1",
-    "flowbite-react": "^0.7.2",
+    "@headlessui/react": "^1.7.15",
+    "@headlessui/vue": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
+    "@heroicons/vue": "^2.0.18",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.3.0",
+    "dotenv": "^16.1.4",
+    "firebase": "^9.22.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^8.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
